<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/monday_english_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_english_text" />

    <Button
        android:id="@+id/monday_jisuanjizuchengyuanli_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_jisuanjizechengyuanli_text" />

    <Button
        android:id="@+id/monday_operatesystem_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_operate_system_text" />

</LinearLayout>